# Argus_env

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
openenv_argus_env.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
server/: Dockerfile  __init__.py  app.py  argus_env_environment.py  requirements.txt
tests/: test_app.py  test_argus_environment.py
